<resources>
    <string name="app_name">kt Dictionary</string>
    <string name="facebook_app_id">2016562068595574</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home">kt Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_EV">English - Vietnamese</string>
    <string name="nav_VE">Vietnamese - English</string>
    <string name="nav_appInfo">Information</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_home">Home</string>
    <string name="nav_mypack">My package</string>
    <string name="nav_trans">Translate</string>
    <string name="searchview">Enter to search...</string>
    <string name="AddToPackage">Add to packages</string>
    <string name="yourpackages">My packages</string>
    <string name="headerAddToPackage">Choose package to add your word</string>
    <string name="addpackage">New package name</string>
    <string name="addWord">New word</string>
    <string name="datecr">Created date: </string>
    <string name="notificationError">Package null! Please add words to this package to set daily notice </string>
    <string name="notification">Long click on this button to set daily notice</string>
    <string name="notificationSuccess">Set daily notice successfully!</string>
    <string name="confirmDeleteWord">Do you want to remove this word?</string>
    <string name="confirmDeletePackage">Do you want to delete this package?</string>
    <string name="confirmAddToPackage">Do you wanna add this word to this package?</string>

</resources>
