<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_EV"
            android:icon="@drawable/vietnamese"
            android:title="@string/nav_EV" />
        <item
            android:id="@+id/nav_VE"
            android:icon="@drawable/english"
            android:title="@string/nav_VE" />
    </group>
    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/nav_home" />
            <item
                android:id="@+id/nav_mypack"
                android:icon="@drawable/mypack"
                android:title="@string/nav_mypack" />
            <item
                android:id="@+id/nav_trans"
                android:icon="@drawable/transdoc"
                android:title="@string/nav_trans" />
        </menu>
    </item>

    <item android:title="Information">
        <menu>
            <item
                android:id="@+id/nav_appInfo"
                android:icon="@drawable/info"
                android:title="@string/nav_appInfo" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
